# kmux

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Islands_Dark.icls  LICENSE  README.es.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.base.json  tsconfig.json  vitest.config.ts  vitest.ssh.config.ts
.codex/: config.toml  hooks.json
.codex/agents/: electron-debugger.toml  electron-pro.toml  qa-expert.toml  reviewer.toml  test-automator.toml  ui-designer.toml
.codex/hooks/: stop_continue.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml  release-desktop.yml  update-model-pricing.yml
apps/desktop/: electron-builder.yml  electron.vite.config.ts  package.json  postcss.config.mjs
apps/desktop/src/: terminalKeyboard.ts
apps/desktop/src/askpass-client/: index.ts
apps/desktop/src/main/: agentHookCommand.ts  antigravityIntegration.test.ts  antigravityIntegration.ts  appIdentity.test.ts  appIdentity.ts  appMenu.test.ts  appMenu.ts  (+90 more)
docs/: agent-signal-matrix.md  development.md  goal.md  linux-desktop.md  linux-release-validation.md  product-spec.md  spec.md
docs/adr/: 0002-electron-xterm-mvp-architecture.md  0003-agent-team-workspaces-and-tmux-compatibility.md  0003-agent-team-workspaces.md  0004-linux-platform-support-and-os-neutral-architecture.md  0005-ssh-remote-workspaces.md  0006-extensible-surfaces-and-markdown-preview.md
docs/decisions/: 0002-electron-xterm-mvp-architecture.md
docs/plans/: 2026-06-10-linux-platform-support-breakdown.md  2026-06-10-linux-spike-fact-log.md  2026-07-17-ssh-remote-workspaces-progress.md  2026-07-17-ssh-remote-workspaces.md
docs/superpowers/plans/: 2026-04-26-external-agent-sessions-sidebar.md  2026-06-01-agent-team-workspaces.md
docs/superpowers/specs/: 2026-04-26-external-agent-sessions-sidebar-design.md  2026-06-04-linux-platform-support-design.md
remote/kmuxd/: Cargo.toml  Dockerfile.linux-musl
remote/kmuxd/crates/bridge/: Cargo.toml
remote/kmuxd/crates/bridge/src/: lib.rs  runtime.rs
remote/kmuxd/crates/cli/: Cargo.toml
remote/kmuxd/crates/cli/src/: lib.rs
remote/kmuxd/crates/compat/: Cargo.toml
remote/kmuxd/crates/compat/src/: lib.rs  remote.rs
remote/kmuxd/crates/doctor/: Cargo.toml
remote/kmuxd/crates/doctor/src/: lib.rs
remote/kmuxd/crates/hook/: Cargo.toml
remote/kmuxd/crates/hook/src/: lib.rs
remote/kmuxd/crates/install/: Cargo.toml
remote/kmuxd/crates/install/src/: lib.rs
remote/kmuxd/crates/journal/: Cargo.toml
remote/kmuxd/crates/journal/src/: lib.rs
remote/kmuxd/crates/keeper/: Cargo.toml
remote/kmuxd/crates/keeper/src/: lib.rs  runtime.rs
remote/kmuxd/crates/metadata/: Cargo.toml
remote/kmuxd/crates/metadata/src/: lib.rs
remote/kmuxd/crates/platform/: Cargo.toml
remote/kmuxd/crates/platform/src/: identity.rs  lib.rs  process.rs  pty.rs
remote/kmuxd/crates/terminal/: Cargo.toml
remote/kmuxd/crates/terminal/src/: lib.rs
remote/kmuxd/src/: main.rs
scripts/: analyze-smoothness-profile.mjs  architecture-boundary.test.mjs  build-remote-runtime.mjs  capture-live-cmux-scene.mjs  capture-reference-scene.mjs  collect-linux-release-evidence.mjs  collect-linux-release-evidence.test.mjs  dev.mjs  dev.test.mjs  ensure-node-pty-spawn-helper.mjs  gate-local-terminal-regression.mjs  gate-remote-runtime-native.mjs  gate-walking-skeleton.mjs  gate-walking-skeleton.test.mjs  generate-streamdown-tailwind-source.mjs  linux-desktop-target.mjs  linux-desktop-target.test.mjs  linux-release-git.mjs  local-terminal-regression-contract.mjs  local-terminal-regression-contract.test.mjs  release-check-linux.mjs  release-check-linux.test.mjs  release-tag.mjs  release-tag.test.mjs  remote-runtime-artifact-contract.mjs  remote-runtime-artifact-contract.test.mjs  smoke-dev.mjs  smoke-dev.test.mjs  smoke-packaged-linux.mjs  smoke-packaged-linux.test.mjs  smoke-packaged-mac.mjs  smoke-packaged-mac.test.mjs  smoothness-agent-stream.mjs  terminal-data-plane-load.mjs  terminal-data-plane-load.test.mjs  update-model-pricing.mjs  update-model-pricing.test.mjs  verify-remote-runtime-artifacts.mjs
tests/e2e/: helpers.test.ts  helpers.ts  kmux-app-lifecycle.spec.ts  kmux-interactions.spec.ts  kmux-keyboard-first.spec.ts  kmux-layout-quality.spec.ts  kmux-notifications.spec.ts  kmux-packaged-smoke.spec.ts  kmux-regressions.spec.ts  kmux-renderer-recovery.spec.ts  kmux-restore.spec.ts  kmux-shell-env.spec.ts  kmux-shell-integration.spec.ts  kmux-smoke.spec.ts  kmux-smoothness-profile.spec.ts  kmux-ssh-remote.spec.ts  kmux-surface-capture.spec.ts  kmux-terminal-data-plane-performance.spec.ts  kmux-usage-cockpit.spec.ts  kmux-walking-skeleton.spec.ts  kmux-workspace-context-menu.spec.ts  kmux-workspace-reorder.spec.ts
tests/e2e/fixtures/: local-terminal-regression-gates.v1.json  remote-performance-gates.v1.json
tests/ssh/: nativeProfileConfiguration.test.ts  remotePerformanceManifest.test.ts
tests/ssh/harness/: connectionAudit.ts  identity.ts  sshTarget.ts  transportFaults.ts
tests/ssh/image/: Dockerfile  entrypoint.sh  manifest.json  sshd_config
tests/ssh/integration/: openSshTransport.test.ts
tests/ssh/native/: runtimeParity.ts
tests/ssh/profile/: README.md  native-profile.template.json  nativeProfileConfiguration.ts  normativeTransport.ts  transportBaseline.ts
(+303 files in other folders)
