[package]
name = "kmux-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
kmux-compat = { path = "../compat" }
kmux-doctor = { path = "../doctor" }
kmux-hook = { path = "../hook" }
kmux-keeper = { path = "../keeper" }
kmux-metadata = { path = "../metadata" }
kmux-platform = { path = "../platform" }
libc.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
