[package]
name = "kmux-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
kmux-compat = { path = "../compat" }
kmux-hook = { path = "../hook" }
kmux-keeper = { path = "../keeper" }
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
