[package]
name = "kmux-hook"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
kmux-compat = { path = "../compat" }
kmux-platform = { path = "../platform" }
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
uuid.workspace = true
