[package]
name = "kmux-keeper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
crossbeam-channel.workspace = true
kmux-compat = { path = "../compat" }
kmux-hook = { path = "../hook" }
kmux-journal = { path = "../journal" }
kmux-platform = { path = "../platform" }
kmux-terminal = { path = "../terminal" }
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
uuid.workspace = true
